--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>Temp</title>
 	<meta name="description" content="">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -19,7 +19,7 @@
 
 <body>
 
-	<p><strong>Далеко-далеко</strong> за словесными горами в стране, гласных и согласных живут рыбные тексты. Скатился что даль пунктуация снова агенство повстречался строчка толку города над своего дороге ведущими коварный дорогу то, ipsum своих грамматики.</p>
+	<h1>Temp</h1>
 	
 
 	<script src="js/scripts.min.js"></script>
